Fix whitespace rendering in bio on LinksPage

--- a/src/app/components/linkspage.css
+++ b/src/app/components/linkspage.css
@@ -15,3 +15,7 @@
 .links-page-contact-btn {
   @apply border-2 shadow-md px-4 py-2 hover:bg-gray-100 rounded-full bg-white border-gray-600 absolute
 }
+
+.bio-container p {
+  margin: 0 0 1em 0;
+}
